--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -8,7 +8,8 @@
 \usepackage{marvosym}% provides \Letter and \Telefon
 %\usepackage[cmintegrals,cmbraces]{newtxmath}
 \usepackage[osf]{ebgaramond}
-
+\usepackage{enumitem}
+\setitemize{nosep}
 % Margins
 %\usepackage[margin=1.5in]{geometry}
 
@@ -34,11 +35,13 @@
 \pagestyle{main}
 
 \titlespacing*{\section}
-{0pt}{10pt}{5pt}
+{0pt}{10pt}{0pt}
 \titlespacing*{\subsection}
 {0pt}{10pt}{0pt}
 \titlespacing*{\subsubsection}
-{0pt}{20pt}{0pt}
+{10pt}{15pt}{0pt}
+\titlespacing*{\paragraph}
+{0pt}{10pt}{0pt}
 
 
 
@@ -293,7 +296,7 @@ Alonso-Ovalle, Luis. 2000. Aspectos gnoseol\'ogicos de la ling\"u\'istica de Cue
 % \renewcommand{\theenumii}{\roman{\enumii}}
 % \begin{revnumerate}
 
-Alonso-Ovalle, Luis \textit{\&} Paula Men\'endez-Benito. (Forthcoming) Free Choice Items and Modal Indefinites. \textit{The Companion to Semantics}, ed. by Lisa Matthewson, Cecile Meier, Hotze Rullmann, and Thomas E. Zimmerman, Wiley Blackwell, 39 pages.
+Alonso-Ovalle, Luis \textit{\&} Paula Men\'endez-Benito. (forthcoming) Free Choice Items and Modal Indefinites. \textit{The Companion to Semantics}, ed. by Lisa Matthewson, Cecile Meier, Hotze Rullmann, and Thomas E. Zimmerman, Wiley Blackwell, 39 pages.
 
 Alonso-Ovalle, Luis \textit{\&} Paula Men\'endez-Benito. 2017. Epistemic Indefinites: On the Content and Distribution of the Epistemic Effect. \textit{Modality across Syntactic Categories.} ed. by Ana Arregui, Marisa Rivero, and Andr\'es Pablo Salanova, Oxford University Press, pp. 11-30.
 
@@ -343,8 +346,7 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 
 % \end{revnumerate}
 
-\subsection*{Papers Presented at Conferences and Published
-      in Proceedings}
+\subsection*{Proceedings Papers}
       
       
  Royer, Justin, and Luis Alonso-Ovalle. 2019. Randon Choice Modality in Chuj: The Case of \textit{Komon}. \textit{Proceedings of Form and Analysis in Mayan Linguistics 5 (FAMLi 5)}, ed. by Ryan Bennett, Robert Henderson, Pedro Mateo Pedro, and Megan Harve, \href{https://escholarship.org/uc/item/5587h7df}{https://escholarship.org/uc/item/5587h7df}
@@ -603,7 +605,9 @@ December 2004.``Equal Rights for Every Disjunct! Quantification over Alternative
 \subsection*{Conference Presentations}
 
 
-\subsubsection*{\hspace{5pt} Papers Delivered}
+\subsubsection*{Papers Delivered}
+
+May 2019, ``Neutralizing Free Choice Items via Maximal Domain Restriction: Farsi \textit{-i} Indefinites'' (with Esmail Moghiseh), \textit{Semantics and Linguistic Theory 29}, University of California at Los Angeles, May 18, 2018.
 
 December 2018, ``Number Inflection, Spanish Bare Interrogatives, and Higher-Order Quantification'' (with Vincent Rouillard), \textit{Going Romance}, University of Utrecht, December 12, 2018 [presented by co-author.]
 
@@ -709,9 +713,8 @@ October 2002. ``Two Types of Indefinites'' (with Paula Men\'endez-Benito), \text
 1998. ``Infinitivos, adjunciones y marcado casual'', \textit{48th Mountain Interstate Foreign Language Conference}, Virginia Tech, Roanoke, VA.
 
 1998. ``Cuervo en el panorama ling\"{u}\'istico europeo de fin de siglo'', \textit{51st Annual Kentucky Foreign Language Conference}, University of Kentucky, Lexington, KY.
-%\partial
 
-\subsubsection*{\hspace{5pt} Poster Presentations}
+\subsubsection*{Poster Presentations}
 
 October 2018. Luis Alonso-Ovalle and Esmail Moghiseh, ``Neutralizing Free Choice items via domain restriction: Farsi \textit{-i} indefinites'', \textit{12th Toronto-Ottawa-Montreal Workshop in Semantics}, March 30, 2019, Concordia University, Montreal.
 
@@ -771,6 +774,7 @@ Concord'' (with Elena Guerzoni), \textit{37th Meeting of the Chicago
 \subsection*{McGill University (2011-)}
 
 \subsubsection*{Undergraduate level}
+
 \textsc{Ling} 565: Pragmatics (Winter 2017, Winter 2019.)
 
 \textsc{Hisp} 501: History of the Spanish Language (Fall 2011; Fall 2015 (taught as \textsc{Hisp} 505, Seminar in Hispanic Studies.))
@@ -788,8 +792,6 @@ section), (Winter 2013.)
 
 \textsc{Hisp} 199 (First Year Seminar): Varieties of Spanish (Winter 2012.)
 
-
-
 \subsubsection*{Graduate level}
 
 \textsc{Ling} 665: Semantics 4 (Winter 2012, Winter 2014, Winter 2018 (meets together with
@@ -800,12 +802,12 @@ Ling 765).)
 LLCU 610: Fundamentals of Linguistics for Language Teaching (Winter 2013.)
 
 
-\subsubsection*{Doctoral Students}
+\subsection*{Doctoral Students}
 
 
-\subsubsection*{\hspace{5pt} A.1. PhD Dissertations}
+\subsubsection*{PhD Dissertations}
 
-\subsubsection*{\hspace{15pt} Co-Supervisor}
+\subsubsection*{Co-Supervisor}
 
 Francesco Gentile, ``Non-Local Modification'', (Co-supervised with Bernhard Schwarz and Junko Shimoyama) (In progress)
 
@@ -819,7 +821,7 @@ Jozina van der Klok, ``Tense and Aspect Markers in Javanese'',
 
 \vspace{-10pt}
 
-\subsubsection*{\hspace{15pt}Committee Member}
+\subsubsection*{Committee Member}
 
 Alanah McKillen, ``On the interpretation of reflexive pronouns'', (Succesfully defended March 2016).
 
@@ -830,9 +832,9 @@ Alexandra Simonenko, ``Grammatical Ingredients of Definiteness''
 \vspace{-10pt}
 
 
-\subsection*{\hspace{5pt} A.2. Evaluation Papers}
+\subsubsection*{Evaluation Papers}
 
-\subsubsection*{\hspace{15pt} (Co-)Supervisor}
+\subsubsection*{(Co-)Supervisor}
 
 Christopher Bruno, ``Contrastive negation and Presuppositional Alternatives'' (Co-supervised with Bernhard Schwarz, successfully defended May 2017.)
 
@@ -860,7 +862,7 @@ Marzieh Mortazavinia, ``\textit{Even} and \textit{Only}''
 2013. )
 
 
-\subsubsection*{\hspace{15pt} Committee Member}
+\subsubsection*{Committee Member}
 
 
 Francesco Gentile,  ``Adjectives as reduced relative clauses. The case of Italian prenominal and postnominal adjectives.'' (Co-supervised with Junko Shimoyama) (Successfully defended June 2017.)
@@ -869,26 +871,25 @@ Daniel Goodhue, ``The Contradiction Contour and Questions''
 (Co-supervised with Michael Wagner and Bernhard Schwarz) (Successfully
 defended May 2014).
 
-\subsubsection*{\hspace{15pt} External Examiner}
+\subsubsection*{External Examiner}
 
 Ph.\ D evaluation paper examiner: Brandon J. Fry, ``The semantics of attitude ascription: a literature review and a proposal for a study of Ojibwe cross-clausal agreement'', University of Ottawa.
 
-\subsubsection*{Postdoctoral Supervision}
+\subsection*{Postdoctoral Supervision}
 
 Aron Hirsch, September 2017 -- , SSHRC postdoctoral fellow (co-supervised with Bernhard Schwarz and Michael Wagner.)
 
-\subsubsection*{MA Theses}
+\subsection*{MA Research Papers}
 
-\subsubsection*{\hspace{15pt} Supervisor}
+\subsubsection*{Supervisor}
 
 Esmail Moghiseh, ``Free Choice Items in Farsi'' (in progress)
 
-
-\subsubsection*{\hspace{15pt} Co-Supervisor}
+\subsubsection*{Co-Supervisor}
 
 Justin Borga, ``Topics on sluicing'', (Co-supervised with Aron Hirsch and Bernhard Schwarz.)
 
-\subsubsection*{Undergraduate Honors Theses (Supervisor)}
+\subsection*{Undergraduate Honors Theses (Supervisor)}
 
 Esmail Moghiseh, 2018. ``Contradiction free strengthening and exhaustification: Persian -\textit{I} indefinites'.' 
 
@@ -919,7 +920,7 @@ Span 102: Elementary Spanish II,  three sections (Fall 2006, Spring
 
 Span 101: Elementary Spanish I, one section (Fall 2007).	
 
- \subsubsection*{\hspace{5pt} Honor Theses Directed at UMass Boston}
+ \subsubsection*{Honor Theses Directed at UMass Boston}
 
  Melodie Reynolds, ``Negative Concord and
 Spanish Yes/No Questions with Preposed Negation'', (two semesters (6
@@ -950,7 +951,7 @@ the semantics section of 24.992, Survey of General Linguistics
 
 \subsection*{University of Massachusetts Amherst (1997-- 2006)}
 
-\subsubsection*{\hspace{5pt} A. Department of Linguistics}
+\subsubsection*{Department of Linguistics}
 
 \textsc{Ling 510:} Introduction to Semantics. Spring 2004. Level:
 senior-level undergraduate course. Teaching Assistant to Prof.\
@@ -960,7 +961,7 @@ Angelika Kratzer. Duties included preparing and teaching a weekly 50 min. hands-
 2003. Level: senior-level undergraduate course. Teaching Assistant to
 Prof.\ Barbara H. Partee. Duties included grading, preparing and teaching several sections of the course. 
 
-\subsubsection*{\hspace{5pt} B. Department of Spanish and Portuguese}
+\subsubsection*{Department of Spanish and Portuguese}
 
 \textsc{span 470}: Introduction to Hispanic Linguistics.
 
@@ -1000,7 +1001,7 @@ Summer 1996,  Institute for the Cooperation with Latin America Fellow,  Spanish 
 
 \subsection*{McGill University (2011 -)}
 
-\subsubsection*{\hspace{5pt} Service to the University}
+\subsubsection*{Service to the University}
 
 Strategic Planning Committee, Faculty of Arts (Fall 2018 - )
 
@@ -1031,9 +1032,9 @@ Served as a pro-dean in the following dissertation defenses:
 
 \end{itemize}
 
-\subsection*{\hspace{5pt} Service to the Department}
+\subsubsection*{Service to the Department}
 
-\subsubsection*{\hspace{10pt} Linguistics}
+\subsubsection*{Department of Linguistics}
 
 Chair, August 2016 --
 
@@ -1103,7 +1104,7 @@ Oral Defense Committee member: Sepideh Mortazavinia, ``Second Language Acquisiti
 
 \vspace{-10pt}
 
-\subsubsection*{\hspace{10pt} Languages, Literatures and Cultures}
+\subsubsection*{Department of Languages, Literatures and Cultures}
 
  Admissions (annual).
 
@@ -1113,7 +1114,7 @@ Job Search Committee, Faculty Lecturer, Italian, Winter 2012.
 
 \subsection*{University of Massachusetts Boston (2006-2011)}
 
-\subsubsection*{\hspace{10pt} Service to the University}
+\subsubsection*{Service to the University}
 
 Spring 2010. Faculty Development Implementation Committee.
 
@@ -1127,13 +1128,13 @@ Spring 2009. Intermediate Seminar Portfolio Review, Seminar Assessment Committee
 Spring 2007, Winter 2008, Spring 2008, Winter 2009. Writing Proficiency Requirement Grader.
 
 
-\subsubsection*{\hspace{10pt}Service to the College of Liberal Arts}
+\subsubsection*{Service to the College of Liberal Arts}
 
 Fall 2007 -- Spring 2009. College of Liberal Arts Senate.
 
 Fall 2008 -- Spring 2009. College of Liberal Arts Senate Executive Committee.
 
-\subsubsection*{ Service to the Department}
+\subsubsection*{Service to the Department}
 
 Fall 2008.  Department Personnel Committee.
 
@@ -1144,37 +1145,58 @@ Departmental webmaster.
 
 \subsection*{Service to the Profession}
 
+\subsubsection*{Editorship}
 
-\subsubsection*{\hspace{10pt}Editorship}
+Editor:
 
-Editor:\\  \textit{Language and Linguistics Compass}, Semantics and Pragmatics Section, (2016 --)
+\begin{itemize}
 
-Editorial board member: \\ \textit{Semantics and Pragmatics} (2011 -- ), \textit{Journal of Semantics} (2015 -- ), \textit{Probus. An International Journal of Romance Linguistics} (2016 --).
+\item[] \textit{Language and Linguistics Compass}, Semantics and Pragmatics Section, (2016 --)
 
-\subsubsection*{\hspace{10pt} Reviewing}
+\end{itemize}
+
+Editorial board member: 
+
+\begin{itemize}
+  \item[] \textit{Semantics and Pragmatics} (2011 -- )
+  \item[] \textit{Journal of Semantics} (2015 -- )
+  \item[] \textit{Probus. An International Journal of Romance Linguistics} (2016 --)
+\end{itemize}
+
+\vspace{-10pt}
+
+\subsubsection*{Reviewing}
 
 Ad-hoc reviewer for articles in the following journals:
 
+Semantics: 
+
 \begin{itemize}
-\item[]\textit{Natural Language Semantics} (2006 --) 
-\item[] \textit{Linguistics and Philosophy} (2011 --)
 \item[] \textit{Journal of Semantics} (2007 --)
+\item[] \textit{Linguistics and Philosophy} (2011 --)
+\item[]\textit{Natural Language Semantics} (2006 --) 
 \item[] \textit{Semantics and Pragmatics} (2011 --)
-\item[] \textit{Linguistic Inquiry} (Academic Year  2004-2005: 1 manuscript.)
-\item[] \textit{Lingua} (Academic Year  2012-2013: 1 manuscript.)
-\item[] \textit{Language} (Academic Year  2009-2010: 1 manuscript.)
-\item[] \textit{Natural Language and Linguistic Theory} (Academic Year
-  2011-2012: 1
-  manuscript.)
-  \item[] \textit{Probus} (Academic Year 2017-18: 1 manuscript, AY 2018-19: 1 manuscript.)
+\end{itemize}
+
+General:
+\begin{itemize}
+\item[] \textit{Glossa} (Academic Year 2019-20: 1 manuscript.)
 \item[] \textit{Journal of Pragmatics} (Academic Year
   2013-2014: 1
   manuscript.)
+\item[] \textit{Language} (Academic Year  2009-2010: 1 manuscript.)
+\item[] \textit{Linguistic Inquiry} (Academic Year  2004-2005: 1 manuscript.)
+\item[] \textit{Lingua} (Academic Year  2012-2013: 1 manuscript.)
+\item[] \textit{Natural Language and Linguistic Theory} (Academic Year
+  2011-2012: 1
+  manuscript.)
+  \item[] \textit{Probus} (Academic Year 2017-18: 1 manuscript, AY 2018-19: 1 manuscript, AY 2019-20: 1 manuscript.)
 \item[] \textit{Studies in Hispanic and Lusophone Linguistics.} (Academic Year 
   2008-2009: 1 manuscript.)
 \item[] \textit{Written Language and Literacy} (John Benjamins) (Academic Year 
   2009-2010: 1 manuscript.)
 \end{itemize}
+
 
 Book manuscripts: Oxford University Press
 (Summer 2011: one book manuscript.)
