--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -348,6 +348,9 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 
 \subsection*{Proceedings Papers}
       
+Alonso-Ovalle, Luis, and Vincent Rouillard. Forthcoming. Number Inflection, Spanish Bare Interrogatives, and Higher-Order Quantification. \textit{Proceedings
+of the Forty-Ninth Annual Meeting of the North East Linguistic Society.}
+ 
       
  Royer, Justin, and Luis Alonso-Ovalle. 2019. Randon Choice Modality in Chuj: The Case of \textit{Komon}. \textit{Proceedings of Form and Analysis in Mayan Linguistics 5 (FAMLi 5)}, ed. by Ryan Bennett, Robert Henderson, Pedro Mateo Pedro, and Megan Harve, \href{https://escholarship.org/uc/item/5587h7df}{https://escholarship.org/uc/item/5587h7df}
       
