--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -348,7 +348,7 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 
 \subsection*{Proceedings Papers}
       
-Alonso-Ovalle, Luis, and Vincent Rouillard. Forthcoming. Number Inflection, Spanish Bare Interrogatives, and Higher-Order Quantification. \textit{Proceedings
+Alonso-Ovalle, Luis, and Vincent Rouillard. (forthcoming) Number Inflection, Spanish Bare Interrogatives, and Higher-Order Quantification. \textit{Proceedings
 of the Forty-Ninth Annual Meeting of the North East Linguistic Society.}
  
       
