--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -610,7 +610,9 @@ December 2004.``Equal Rights for Every Disjunct! Quantification over Alternative
 
 \subsubsection*{Papers Delivered}
 
-May 2019, ``Neutralizing Free Choice Items via Maximal Domain Restriction: Farsi \textit{-i} Indefinites'' (with Esmail Moghiseh), \textit{Semantics and Linguistic Theory 29}, University of California at Los Angeles, May 18, 2018.
+September 2019, ``Random-Choice Modality: The View from Chuj (Mayan)'' (with Justin Royer), \textit{Sinn und Bedeutung 24}, University of Osnabr\"{u}ck, September 5, 2019. 
+
+May 2019, ``Neutralizing Free Choice Items via Maximal Domain Restriction: Farsi \textit{-i} Indefinites'' (with Esmail Moghiseh), \textit{Semantics and Linguistic Theory 29}, University of California at Los Angeles, May 18, 2019.
 
 December 2018, ``Number Inflection, Spanish Bare Interrogatives, and Higher-Order Quantification'' (with Vincent Rouillard), \textit{Going Romance}, University of Utrecht, December 12, 2018 [presented by co-author.]
 
