--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -351,6 +351,8 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 Alonso-Ovalle, Luis, and Vincent Rouillard. (forthcoming) Number Inflection, Spanish Bare Interrogatives, and Higher-Order Quantification. \textit{Proceedings
 of the Forty-Ninth Annual Meeting of the North East Linguistic Society.}
  
+ Alonso-Ovalle, Luis and Esmail Moghiseh. 2019. Contradiction-Free Strengthening and Alternative Discharge: The Case of Farsi \textit{-I} Indefinites. \textit{Proceedings of the Twenty-Third Annual} Sinn und Bedeutung \textit{Conference}, ed. by Mar\'ia Teresa Espinal, Elena Castoviejo, Manuel Leonetti, Louise McNally, and Cristina Real-Puigdollers, Universitat Aut\`onoma de Barcelona, Ikerbasque and UPV/EHU, Universidad de Alcal\'a and Universitat Pompeu Fabra, pp. 1-18  (Available
+at \href{https://semanticsarchive.net/Archive/Tg3ZGI2M/SuB23-twovolume.pdf}{https://semanticsarchive.net/Archive/Tg3ZGI2M/SuB23-twovolume.pdf})
       
  Royer, Justin, and Luis Alonso-Ovalle. 2019. Randon Choice Modality in Chuj: The Case of \textit{Komon}. \textit{Proceedings of Form and Analysis in Mayan Linguistics 5 (FAMLi 5)}, ed. by Ryan Bennett, Robert Henderson, Pedro Mateo Pedro, and Megan Harve, \href{https://escholarship.org/uc/item/5587h7df}{https://escholarship.org/uc/item/5587h7df}
       
