--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -348,10 +348,13 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 
 \subsection*{Proceedings Papers}
       
+      Alonso-Ovalle, Luis and Esmail Moghiseh. (forthcoming) Neutralizing Free Choice Items via Maximal Domain
+Restriction: Farsi \textit{-i} Indefinites, \textit{Proceedings of the Twenty-Nineth Semantics and Linguistic Theory Conference}, CLC Publications.
+      
 Alonso-Ovalle, Luis, and Vincent Rouillard. (forthcoming) Number Inflection, Spanish Bare Interrogatives, and Higher-Order Quantification. \textit{Proceedings
 of the Forty-Ninth Annual Meeting of the North East Linguistic Society.}
  
- Alonso-Ovalle, Luis and Esmail Moghiseh. 2019. Contradiction-Free Strengthening and Alternative Discharge: The Case of Farsi \textit{-I} Indefinites. \textit{Proceedings of the Twenty-Third Annual} Sinn und Bedeutung \textit{Conference}, ed. by Mar\'ia Teresa Espinal, Elena Castoviejo, Manuel Leonetti, Louise McNally, and Cristina Real-Puigdollers, Universitat Aut\`onoma de Barcelona, Ikerbasque and UPV/EHU, Universidad de Alcal\'a and Universitat Pompeu Fabra, pp. 1-18  (Available
+ Alonso-Ovalle, Luis and Esmail Moghiseh. 2019. Contradiction-Free Strengthening and Alternative Discharge: The Case of Farsi \textit{-i} Indefinites. \textit{Proceedings of the Twenty-Third Annual} Sinn und Bedeutung \textit{Conference}, ed. by Mar\'ia Teresa Espinal, Elena Castoviejo, Manuel Leonetti, Louise McNally, and Cristina Real-Puigdollers, Universitat Aut\`onoma de Barcelona, Ikerbasque and UPV/EHU, Universidad de Alcal\'a and Universitat Pompeu Fabra, pp. 1-18  (Available
 at \href{https://semanticsarchive.net/Archive/Tg3ZGI2M/SuB23-twovolume.pdf}{https://semanticsarchive.net/Archive/Tg3ZGI2M/SuB23-twovolume.pdf})
       
  Royer, Justin, and Luis Alonso-Ovalle. 2019. Randon Choice Modality in Chuj: The Case of \textit{Komon}. \textit{Proceedings of Form and Analysis in Mayan Linguistics 5 (FAMLi 5)}, ed. by Ryan Bennett, Robert Henderson, Pedro Mateo Pedro, and Megan Harve, \href{https://escholarship.org/uc/item/5587h7df}{https://escholarship.org/uc/item/5587h7df}
@@ -521,6 +524,8 @@ Alonso-Ovalle, Luis. (ed.) 2003. \emph{On Semantic Processing, University of Mas
 
 
 \subsection*{Invited Talks}
+
+September 2019. ``Random Choice Modality Beyond Romance: The View from Chuj (Mayan)'', (with Justin Royer), Indefinita in der Romania, XXXVI Romanistentag, University of Kassel, Germany, September 30, 2019.
 
 April 2019. ``Keep \textit{Only} Strong'', (with Aron Hirsch), Department of Linguistics Colloquium, University of Maryland, April 26, 2019.
 
