--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -348,11 +348,14 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 
 \subsection*{Proceedings Papers}
       
-      Alonso-Ovalle, Luis and Esmail Moghiseh. (forthcoming) Neutralizing Free Choice Items via Maximal Domain
-Restriction: Farsi \textit{-i} Indefinites, \textit{Proceedings of the Twenty-Nineth Semantics and Linguistic Theory Conference}, CLC Publications.
+    Alonso-Ovalle and Justin Royer. (forthcoming) Random choice modality: The view from Chuj (Mayan), \textit{Proceedings of the Twenty-Fourth Annual} Sinn und Bedeutung \textit{Conference}. [available at \href{ling.auf.net/lingbuzz/005007}{https://ling.auf.net/lingbuzz/005007}]
+    
+    
+      Alonso-Ovalle, Luis and Esmail Moghiseh. (2019) Neutralizing Free Choice Items via Maximal Domain
+Restriction: Farsi \textit{-i} Indefinites, \textit{Proceedings of the Twenty-Ninth Semantics and Linguistic Theory Conference}, ed. by Katherine Blake, Forrest Davis, Kaelyn Lamp, and Joseph Rhyne, CLC Publications, pp. 686–705. 
       
-Alonso-Ovalle, Luis, and Vincent Rouillard. (forthcoming) Number Inflection, Spanish Bare Interrogatives, and Higher-Order Quantification. \textit{Proceedings
-of the Forty-Ninth Annual Meeting of the North East Linguistic Society.}
+Alonso-Ovalle, Luis, and Vincent Rouillard. (2019) Number Inflection, Spanish Bare Interrogatives, and Higher-Order Quantification. \textit{Proceedings
+of the Forty-Ninth Annual Meeting of the North East Linguistic Society}, ed. by Maggie Baird and Jonathan Pesetsky, University of Massachusetts, Amherst, MA: Graduate Linguistics Student Association, pp 25-39.
  
  Alonso-Ovalle, Luis and Esmail Moghiseh. 2019. Contradiction-Free Strengthening and Alternative Discharge: The Case of Farsi \textit{-i} Indefinites. \textit{Proceedings of the Twenty-Third Annual} Sinn und Bedeutung \textit{Conference}, ed. by Mar\'ia Teresa Espinal, Elena Castoviejo, Manuel Leonetti, Louise McNally, and Cristina Real-Puigdollers, Universitat Aut\`onoma de Barcelona, Ikerbasque and UPV/EHU, Universidad de Alcal\'a and Universitat Pompeu Fabra, pp. 1-18  (Available
 at \href{https://semanticsarchive.net/Archive/Tg3ZGI2M/SuB23-twovolume.pdf}{https://semanticsarchive.net/Archive/Tg3ZGI2M/SuB23-twovolume.pdf})
@@ -617,7 +620,7 @@ December 2004.``Equal Rights for Every Disjunct! Quantification over Alternative
 
 \subsubsection*{Papers Delivered}
 
-September 2019, ``Random-Choice Modality: The View from Chuj (Mayan)'' (with Justin Royer), \textit{Sinn und Bedeutung 24}, University of Osnabr\"{u}ck, September 5, 2019.
+September 2019, ``Random-Choice Modality: The View from Chuj (Mayan)'' (with Justin Royer), \textit{Sinn und Bedeutung 24}, University of Osnabr\"{u}ck, September 5, 2019. [presented by co-author.]
 
 May 2019, ``Neutralizing Free Choice Items via Maximal Domain Restriction: Farsi \textit{-i} Indefinites'' (with Esmail Moghiseh), \textit{Semantics and Linguistic Theory 29}, University of California at Los Angeles, May 18, 2019.
 
@@ -728,7 +731,7 @@ October 2002. ``Two Types of Indefinites'' (with Paula Men\'endez-Benito), \text
 
 \subsubsection*{Poster Presentations}
 
-October 2018. Luis Alonso-Ovalle and Esmail Moghiseh, ``Neutralizing Free Choice items via domain restriction: Farsi \textit{-i} indefinites'', \textit{12th Toronto-Ottawa-Montreal Workshop in Semantics}, March 30, 2019, Concordia University, Montreal.
+March 2019. Luis Alonso-Ovalle and Esmail Moghiseh, ``Neutralizing Free Choice items via domain restriction: Farsi \textit{-i} indefinites'', \textit{12th Toronto-Ottawa-Montreal Workshop in Semantics}, March 30, 2019, Concordia University, Montreal.
 
 August 2018. Justin Royer and Luis Alonso-Ovalle, ``La expresi\'on de la modalidad de decisi\'on arbitraria en Chuj'', \textit{Form and Analysis in Mayan Linguistics 5}, August 10-11, 2018, Antigua. Guatemala, Centro de Formaci\'on de la Cooperaci\'on Espa\~nola en Antigua, Guatemala [presented by co-author.]
 
@@ -795,7 +798,7 @@ Concord'' (with Elena Guerzoni), \textit{37th Meeting of the Chicago
 
 \textsc{Hisp} 310: How Spanish Works (Fall 2012, Fall 2013, Fall 2014.)
 
-\textsc{Ling} 260: Meaning in Language (Fall 2017.)
+\textsc{Ling} 260: Meaning in Language (Fall 2017, Fall 2019.)
 
 \textsc{Ling} 201: Introduction to Linguistics (Semantics and Pragmatics
 section), (Winter 2013.)
@@ -806,7 +809,7 @@ section), (Winter 2013.)
 
 \subsubsection*{Graduate level}
 
-\textsc{Ling} 665: Semantics 4 (Winter 2012, Winter 2014, Winter 2018 (meets together with
+\textsc{Ling} 665: Semantics 4 (Winter 2012, Winter 2014, Winter 2018, Winter 2020 (meets together with
 Ling 765).)
 
 \textsc{Ling} 660: Semantics 3 (Fall 2012, Fall 2014, Fall 2016, Fall 2018.)
@@ -821,7 +824,7 @@ LLCU 610: Fundamentals of Linguistics for Language Teaching (Winter 2013.)
 
 \subsubsection*{Co-Supervisor}
 
-Francesco Gentile, ``Non-Local Modification'', (Co-supervised with Bernhard Schwarz and Junko Shimoyama) (In progress)
+Francesco Gentile, ``Non-Local Modification'', (Co-supervised with Bernhard Schwarz and Junko Shimoyama) (Successfully defended, December 9, 2019.)
 
 Dan Goodhue, ``On Asking and Answering Biased Polar Questions", (Co-supervised with Bernhard Schwarz and Michael Wagner) (Successfully defended, February 2018.)
 
@@ -853,7 +856,9 @@ Christopher Bruno, ``Contrastive negation and Presuppositional Alternatives'' (C
 Francesco Gentile, ``Adjectives as Reduced Relative Clauses?
 The case of Italian Prenominal and Postnominal adjectives.'' (Successfully defended April  2017.)
 
-Dan Goodhue, ``On the Presuppositions of Epistemic \textit{Must}" (Co-supervised with Bernhard Schwarz.) (Successfully defended, March 2015.)
+Dan Goodhue, ``On the Presuppositions of Epistemic \textit{Must}" (Co-supervised with Bernhard Schwarz, successfully defended, March 2015.)
+
+Will Johnston, ``Questions and Cumulative Readings'' (Co-supervised with Bernhard Schwarz, in progress)
 
 Henrison Hsieh, ``An Additional Inference for Actuality Entailments"
 (Co-supervised with Bernhard Schwarz.) (Successfully defended, June 2015.)
@@ -862,6 +867,8 @@ Oriana Kilbourn-Cer\'on, ``\textit{Almost}''
 (Successfully completed, August 2013.) (Co-supervised with Bernhard Schwarz).
 
 Dejan Milacic, ``Irrealis Mood in Kabyle'' (defended summer 2017.)
+
+Esmail Moghiseh, ``Uniqueness and Existential Free Choice Items in Farsi" (in progress)
 
 Gretchen McCulloch, ``Modal Indefinites in Mi'gmaq: \textit{Tampas}''
 (Defended, July 2013.)
@@ -872,6 +879,8 @@ Grodzinsky) (Successfully completed, August 2013.)
 Marzieh Mortazavinia, ``\textit{Even} and \textit{Only}''
 (Co-supervised with Bernhard Schwarz) (Successfully completed, July
 2013. )
+
+Matthieu Paill\'e ``Term colors and Exhaustive Readings.'' (Co-supervised with Bernhard Schwarz) (In-Progress)
 
 
 \subsubsection*{Committee Member}
@@ -885,23 +894,30 @@ defended May 2014).
 
 \subsubsection*{External Examiner}
 
+Jumanah Abusulaiman, “Modality in Makkan Arabic: The Interaction between Modals and Aspect” University of Ottawa , Ph. D. dissertation, on November 4, 2019.
+
 Ph.\ D evaluation paper examiner: Brandon J. Fry, ``The semantics of attitude ascription: a literature review and a proposal for a study of Ojibwe cross-clausal agreement'', University of Ottawa.
+
+Jared Kabbara, School of Computer Science, dissertation proposal defence, Dec 6. 2019.
+
 
 \subsection*{Postdoctoral Supervision}
 
-Aron Hirsch, September 2017 -- , SSHRC postdoctoral fellow (co-supervised with Bernhard Schwarz and Michael Wagner.)
+Aron Hirsch, September 2017 -- May 2019 , SSHRC postdoctoral fellow (co-supervised with Bernhard Schwarz and Michael Wagner.)
 
 \subsection*{MA Research Papers}
 
 \subsubsection*{Supervisor}
 
-Esmail Moghiseh, ``Free Choice Items in Farsi'' (in progress)
+Esmail Moghiseh, ``Free Choice Items in Farsi'' (fast-tracked to Ph.D. program)
 
 \subsubsection*{Co-Supervisor}
 
 Justin Borga, ``Topics on sluicing'', (Co-supervised with Aron Hirsch and Bernhard Schwarz.)
 
 \subsection*{Undergraduate Honors Theses (Supervisor)}
+
+Erica Brandao, in progress. ``Brazilian Portuguese \textit{Algum}.'' (ARIA award, summer 2019.)
 
 Esmail Moghiseh, 2018. ``Contradiction free strengthening and exhaustification: Persian -\textit{I} indefinites'.' 
 
@@ -1197,12 +1213,13 @@ General:
   2013-2014: 1
   manuscript.)
 \item[] \textit{Language} (Academic Year  2009-2010: 1 manuscript.)
-\item[] \textit{Linguistic Inquiry} (Academic Year  2004-2005: 1 manuscript.)
+\item[] \textit{Linguistic Inquiry} (Academic Year  2004-2005: 1 manuscript. 2019-2020: 1 manuscript.)
 \item[] \textit{Lingua} (Academic Year  2012-2013: 1 manuscript.)
 \item[] \textit{Natural Language and Linguistic Theory} (Academic Year
   2011-2012: 1
   manuscript.)
   \item[] \textit{Probus} (Academic Year 2017-18: 1 manuscript, AY 2018-19: 1 manuscript, AY 2019-20: 1 manuscript.)
+  \item[] \textit{Theoretical Linguistics} (Academic Year 2019-2020:1 manuscript.)
 \item[] \textit{Studies in Hispanic and Lusophone Linguistics.} (Academic Year 
   2008-2009: 1 manuscript.)
 \item[] \textit{Written Language and Literacy} (John Benjamins) (Academic Year 
@@ -1232,18 +1249,20 @@ Reviewed section manuscripts for edited volumes:
 
 Grant proposal reviewer for NSF (one proposal, 2011), Israel Science Foundation (one grant proposal, 2016), Leibniz Association.
 
-Abstract reviewer for the following conferences:
+Abstract reviewer for conferences:
 
 \begin{itemize}
-\item[] \textit{Semantics and Linguistic Theory} (2007 -- 2018).
-\item[] \textit{Sinn und Bedeutung} (2009 -- 2018).
-\item [] \textit{Amsterdam Colloquium} (2012, 2013, 2015, 2017)
-\item[] \textit{North East Linguistics Society} (2009 -- 2018)
-\item[] \textit{West Coast Conference on Formal Linguistics} (2012 -- 2018)
+\item[] \textit{Semantics and Linguistic Theory} (2007 --).
+\item[] \textit{Sinn und Bedeutung} (2009 -- ).
+\item [] \textit{Amsterdam Colloquium} (2012, 2013, 2015, 2017, 2019)
+\item[] \textit{North East Linguistics Society} (2009 -- )
+\item[] \textit{West Coast Conference on Formal Linguistics} (2012 -- )
 \item[] \textit{Generative Linguistics in the Old World} (2012, 2014, 2017)
-\item[] Canadian Linguistics Association Meeting Program Committee member (2014 -- 2015, 2019)
+\item[] Canadian Linguistics Association Meeting Program Committee member (2014 -- 2015, 2019, 2020)
 \item[] \textit{32nd Linguistic Symposium on Romance Languages}, University of Toronto.
+\item[] \textsc{sensus}, University of Massachusetts at Amherst (2020).
 \end{itemize}
+
 
 External examiner, pre-tenure formal review, Department of Linguistics, the University of Utah.
 
