SALT 2020, SuB info

--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -347,9 +347,12 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 % \end{revnumerate}
 
 \subsection*{Proceedings Papers}
+
+% Alonso-Ovalle and Esmail Moghiseh. (forthcoming) ``Numeral \textit{Any}: the View from Farsi'', \textit{Proceedings of the Thirtieth Semantics and Linguistic Theory Conference}, Cornell University.
+
       
-    Alonso-Ovalle and Justin Royer. (forthcoming) Random choice modality: The view from Chuj (Mayan), \textit{Proceedings of the Twenty-Fourth Annual} Sinn und Bedeutung \textit{Conference}. [available at \href{ling.auf.net/lingbuzz/005007}{https://ling.auf.net/lingbuzz/005007}]
-    
+    Alonso-Ovalle, Luis and Justin Royer. (2020) Random choice modality: The view from Chuj (Mayan), \textit{Proceedings of the Twenty-Fourth Annual} Sinn und Bedeutung \textit{Conference}, ed. by Michael Franke, Nikola Kompa, Mingya Liu, Jutta L. Mueller, and Juliane Schwab, Osnabr\"{u}ck University, Humboldt University of Berlin, pp. 48-65. 
+    [available at \href{https://semanticsarchive.net/Archive/mZhNDA4Y/SuB24-twovolume.pdf}{https://semanticsarchive.net/Archive/mZhNDA4Y/SuB24-twovolume.pdf}]
     
       Alonso-Ovalle, Luis and Esmail Moghiseh. (2019) Neutralizing Free Choice Items via Maximal Domain
 Restriction: Farsi \textit{-i} Indefinites, \textit{Proceedings of the Twenty-Ninth Semantics and Linguistic Theory Conference}, ed. by Katherine Blake, Forrest Davis, Kaelyn Lamp, and Joseph Rhyne, CLC Publications, pp. 686–705. 
@@ -730,6 +733,8 @@ October 2002. ``Two Types of Indefinites'' (with Paula Men\'endez-Benito), \text
 1998. ``Cuervo en el panorama ling\"{u}\'istico europeo de fin de siglo'', \textit{51st Annual Kentucky Foreign Language Conference}, University of Kentucky, Lexington, KY.
 
 \subsubsection*{Poster Presentations}
+
+August 2020. Luis Alonso-Ovalle and Esmail Moghiseh, ``Numeral \textit{Any}: the View from Farsi'', \textit{Thirtieth Semantics and Linguistic Theory Conference}, Cornell University [virtual meeting.]
 
 March 2019. Luis Alonso-Ovalle and Esmail Moghiseh, ``Neutralizing Free Choice items via domain restriction: Farsi \textit{-i} indefinites'', \textit{12th Toronto-Ottawa-Montreal Workshop in Semantics}, March 30, 2019, Concordia University, Montreal.
 
