--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -531,6 +531,8 @@ Alonso-Ovalle, Luis. (ed.) 2003. \emph{On Semantic Processing, University of Mas
 
 \subsection*{Invited Talks}
 
+September 2020. ``Spanish Bare Interrogatives and Number'', (with Vincent Rouillard), SENSUS, Constructing Meaning in Romance, University of Massachusetts, Amherst (online meeting), September 26, 2020.
+
 September 2019. ``Random Choice Modality Beyond Romance: The View from Chuj (Mayan)'', (with Justin Royer), Indefinita in der Romania, XXXVI Romanistentag, University of Kassel, Germany, September 30, 2019.
 
 April 2019. ``Keep \textit{Only} Strong'', (with Aron Hirsch), Department of Linguistics Colloquium, University of Maryland, April 26, 2019.
@@ -622,6 +624,8 @@ December 2004.``Equal Rights for Every Disjunct! Quantification over Alternative
 
 
 \subsubsection*{Papers Delivered}
+
+September 2020, ``Concessive scalar items: Symmetric vs. non-symmetric alternatives'' (with Elizabeth Heredia-Murillo), \textit{SENSUS, Constructing Meaning in Romance}, University of Massachusetts at Amherst, September 27, 2020.
 
 September 2019, ``Random-Choice Modality: The View from Chuj (Mayan)'' (with Justin Royer), \textit{Sinn und Bedeutung 24}, University of Osnabr\"{u}ck, September 5, 2019. [presented by co-author.]
 
@@ -733,6 +737,9 @@ October 2002. ``Two Types of Indefinites'' (with Paula Men\'endez-Benito), \text
 1998. ``Cuervo en el panorama ling\"{u}\'istico europeo de fin de siglo'', \textit{51st Annual Kentucky Foreign Language Conference}, University of Kentucky, Lexington, KY.
 
 \subsubsection*{Poster Presentations}
+
+November 2020. Luis Alonso-Ovalle and Jonathan Palucci, ``Numeral \textit{Any}: In Favor of Viability'',  \textit{51th Meeting of the North East Linguistic Society}, Universit\'e de Qu\'ebec \`a Montr\'eal, November 6, 2020 [Flash talk].
+
 
 August 2020. Luis Alonso-Ovalle and Esmail Moghiseh, ``Numeral \textit{Any}: the View from Farsi'', \textit{Thirtieth Semantics and Linguistic Theory Conference}, Cornell University [virtual meeting.]
 
