--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -738,6 +738,9 @@ October 2002. ``Two Types of Indefinites'' (with Paula Men\'endez-Benito), \text
 
 \subsubsection*{Poster Presentations}
 
+November 2020. Luis Alonso-Ovalle and Jonathan Palucci, ``Numeral \textit{Any}: In Favor of Viability'',  \textit{51th Meeting of the North East Linguistic Society}, Universit\'e de Qu\'ebec \`a Montr\'eal, November 6, 2020 [Flash talk].
+
+
 August 2020. Luis Alonso-Ovalle and Esmail Moghiseh, ``Numeral \textit{Any}: the View from Farsi'', \textit{Thirtieth Semantics and Linguistic Theory Conference}, Cornell University [virtual meeting.]
 
 March 2019. Luis Alonso-Ovalle and Esmail Moghiseh, ``Neutralizing Free Choice items via domain restriction: Farsi \textit{-i} indefinites'', \textit{12th Toronto-Ottawa-Montreal Workshop in Semantics}, March 30, 2019, Concordia University, Montreal.
