--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -738,7 +738,14 @@ October 2002. ``Two Types of Indefinites'' (with Paula Men\'endez-Benito), \text
 
 \subsubsection*{Poster Presentations}
 
-November 2020. Luis Alonso-Ovalle and Jonathan Palucci, ``Numeral \textit{Any}: In Favor of Viability'',  \textit{51th Meeting of the North East Linguistic Society}, Universit\'e de Qu\'ebec \`a Montr\'eal, November 6, 2020 [Flash talk].
+November 2020. Luis Alonso-Ovalle and g Heredia-Murillo,
+``Concessive Scalar Items: More about \textit{Siquiera} in Spanish'',
+\textit{Going Romance 34}, Paris-8 \& CNRS, November 26, 2020 [Flash talk, virtual meeting]
+
+November 2020. Luis Alonso-Ovalle and Jonathan Palucci, ``Numeral
+\textit{Any}: In Favor of Viability'',  \textit{51th Meeting of the
+  North East Linguistic Society}, Universit\'e de Qu\'ebec \`a
+Montr\'eal, November 6, 2020 [Flash talk, virtual meeting.]
 
 
 August 2020. Luis Alonso-Ovalle and Esmail Moghiseh, ``Numeral \textit{Any}: the View from Farsi'', \textit{Thirtieth Semantics and Linguistic Theory Conference}, Cornell University [virtual meeting.]
