--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -229,6 +229,11 @@ Joseph P. Healey Grant Program (AY 2007-2009), Office of the Vice Provost for Re
 
 \subsection*{Journal Articles}
 
+Alonso-Ovalle, Luis \textit{\&} Aron Hirsch. (forthcoming) Keep \textit{Only} Strong, \textit{Semantics and Pragmatics}.
+
+Alonso-Ovalle, Luis \textit{\&} Justin Royer. (forthcoming) Random Choice from Likelihood: The Case of Chuj (Mayan), \textit{Journal of Semantics}.
+
+
 Alonso-Ovalle, Luis \textit{\&} Paula Men\'endez-Benito. 2018. Projecting Possibilities in the Nominal Domain. Spanish \textit{Uno Cualquiera}, \textit{Journal of Semantics}. 35:1, 1-41.
 
 %[Accepted Dec 2016]
@@ -348,7 +353,7 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 
 \subsection*{Proceedings Papers}
 
-% Alonso-Ovalle and Esmail Moghiseh. (forthcoming) ``Numeral \textit{Any}: the View from Farsi'', \textit{Proceedings of the Thirtieth Semantics and Linguistic Theory Conference}, Cornell University.
+ Alonso-Ovalle and Esmail Moghiseh. (forthcoming) ``Numeral \textit{Any}: the View from Farsi'', \textit{Proceedings of the Thirtieth Semantics and Linguistic Theory Conference}, Cornell University.
 
       
     Alonso-Ovalle, Luis and Justin Royer. (2020) Random choice modality: The view from Chuj (Mayan), \textit{Proceedings of the Twenty-Fourth Annual} Sinn und Bedeutung \textit{Conference}, ed. by Michael Franke, Nikola Kompa, Mingya Liu, Jutta L. Mueller, and Juliane Schwab, Osnabr\"{u}ck University, Humboldt University of Berlin, pp. 48-65. 
